Se termino de hacer la logica para borrar productos del carrito correctamente, se agregaron cards de error y success en el carrito y se mejoró el CSS. Queda limpiar el codigo para poder entregar

--- a/carrito.html
+++ b/carrito.html
@@ -5,21 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <script defer src="./js/checkout.js"></script>
-    <script src="./js/carrito.js"></script>
+    <script src="./js/variables.js"></script>
     <title>Carrito</title>
 </head>
 <body>
+    <section class="nav-container">
+        <div class="nav">
+            <div class="titulo">
+                <h1>Tu %0 KM</h1>
+            </div>
+            <div class="menu">
+                <ul class="listMenu">
+                    <li class="home">Home</li>
+                    <li class="modelos">Modelos</li>
+                    <li class="contacto">Contacto</li>
+                </ul>
+            </div>
+            <div class="buscador">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <div class="carrito"><a href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
+        </div>
+        
+        <div class="portada">
+            <div class="titulo">
+                <h1>Hasta 24 cuotas sin interés.</h1>
+            </div>
+        </div>
+    </section>
     <section class="section-cart">
-        <div class="portada-cart">
+        <div class="cart-title">
+            <h2>Tu carrito</h2>
+        </div>
+        <div class="cart-container-container">
+            <div class="cart-container">
 
+            </div>
         </div>
-        <div class="cart-container">
+ 
+        <div class="botones-cart">
+            <div class="volver-container">
+                <a href="index.html"><button class="volver-button">Seguir comprando</button></a>
+            </div>
+            <div class="comprar-container">
+                <button class="comprar-button">Comprar</button>
+            </div>
+        </div>
 
-        </div>
-        <div class="volver-container">
-            <a href="index.html"><button class="volver-button">Seguir comprando</button></a>
-            
-        </div>
     </section>
 </body>
 </html>
