--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/carrito.js"></script>
+    <script src="./js/variables.js"></script>
     <script defer src="./js/index.js"></script>
     <title>Tu %0KM</title>
 </head>
@@ -29,7 +29,7 @@
             <div class="buscador">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
-            <div class="carrito"><a href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
+            <div class="carrito"><a href="carrito.html">Mi carrito <i class="fa-solid fa-cart-shopping"></i></a></div>
         </div>
         
         <div class="portada">
