Se agregaron librerias para alerts (toastify y sweet alert)

--- a/carrito.html
+++ b/carrito.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+
     <script defer src="./js/checkout.js"></script>
     <script src="./js/variables.js"></script>
     <title>Carrito</title>
@@ -53,5 +54,7 @@
         </div>
 
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.all.min.js"></script>
 </body>
+
 </html>
