--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             </div>
         </div>
         
+    </section>
+
+    <section class="portada-container">
         <div class="portada">
             <div class="titulo">
                 <h1>Hasta 24 cuotas sin interés.</h1>
@@ -64,9 +67,12 @@
                             <input type="number" class="input-max" value="5000000">
                         </div>
                         <div class="slider-max slider">
-                            <input type="range" step="100000" class="range-max" min="5000000" max="9000000" value="7000000">
+                            <input type="range" step="100000" class="range-max" min="5000000" max="9500000" value="7000000">
                         </div>
                     </div>
+                </div>
+                <div class="limpiarFiltros-container">
+                    <button class="limpiar-filtro" type="submit">Limpiar filtros</button>
                 </div>
                 <div class="submit-filtroContainer">
                     <button class="submit-filtro" type="submit">Buscar</button>
