--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </div>
             <div class="menu">
                 <ul class="listMenu">
-                    <li class="modelos"><a href="#filtros">Modelos</a></li>
-                    <li class="contacto"><a href="#portada">Contacto</a></li>
+                    <li class="modelos list-item"><a class="link-menu" href="#filtros">Modelos</a></li>
+                    <li class="contacto list-item"><a href="#portada" class="link-menu">Contacto</a></li>
                 </ul>
             </div>
             <div class="buscador">
@@ -139,7 +139,7 @@
             </ul>
         </div>
         <div class="copyright">
-            <h3>© Copyright todos los derechos reservados 2023</h3>
+            <h3 class="copyright-h3">© Copyright todos los derechos reservados 2023</h3>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js
