se agregó async await y  se terminó de diseñar el carrito

--- a/carrito.html
+++ b/carrito.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
-
     <script defer src="./js/checkout.js"></script>
     <script src="./js/variables.js"></script>
     <title>Carrito</title>
@@ -40,11 +40,18 @@
         </div>
     </section>
 
+    <section class="guia-carrito">
+        <div class="primer-paso">
+            <div class="primer-paso-logo"><h3 class="h3-pasos">Ver tu carrito</h3></div>
+        </div>
+        <div class="divisor"><div class="linea"></div></div>
+        <div class="segundo-paso"><h3 class="h3-pasos">Pagar</h3></div>
+    </section>
 
     <section class="section-cart">
-        <div class="cart-title">
+        <!-- <div class="cart-title">
             <h2>Tu carrito</h2>
-        </div>
+        </div> -->
         <div class="cart-container-container">
             <div class="cart-container">
 
@@ -56,12 +63,14 @@
                 <a href="index.html"><button class="volver-button">Seguir comprando</button></a>
             </div>
             <div class="comprar-container">
-                <button class="comprar-button">Comprar</button>
+                <button class="comprar-button">Ir a pagar</button>
             </div>
         </div>
 
     </section>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.all.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js
+    "></script>
 </body>
 
 </html>
