--- a/html/carrito.html
+++ b/html/carrito.html
@@ -51,9 +51,6 @@
         </section>
     </div>
     <section class="section-cart">
-        <!-- <div class="cart-title">
-            <h2>Tu carrito</h2>
-        </div> -->
         <div class="cart-container-container">
             <div class="cart-container">
 
@@ -70,6 +67,25 @@
         </div>
 
     </section>
+
+    <footer>
+        <div class="titleFoot">
+            <h2>Tu %0KM</h2>
+        </div>
+        <div class="redes">
+            <ul class="listRedes">
+                <li class="facebook redes-icon">
+                    <a target="_blank" href="http://www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li class="instagram redes-icon">
+                    <a target="_blank" href="http://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <h3 class="copyright-h3">© Copyright todos los derechos reservados 2023</h3>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js
     "></script>
